A prototype of IO not based on Console.